# CMake_learning

./: .gitignore  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Calculator.sln  README.md  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Calculator/: calc.vcxproj.filters  calclib.vcxproj.filters  calcprint.vcxproj.filters  cmake_install.cmake  main.cpp  printHello.cpp  printer.vcxproj.filters
Calculator/apps/: CMakeLists.txt
Calculator/include/calc/: printHello.h  printlib.hpp
Calculator/src/: CMakeLists.txt
Calculator/src/libs/: CMakeLists.txt
Calculator/src/libs/calclib/: CMakeLists.txt  calclib.cpp
Calculator/src/libs/calclib/include/calclib/: lib.hpp
Calculator/src/libs/calcprint/: CMakeLists.txt  calcprint.cpp
